# ragctl

./: .env.example  README.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
src/: cli.py  config.py  embeddings.py  loader.py  rag.py  vector_store.py
tests/: test_loader.py
